--- a/templates/posts.html
+++ b/templates/posts.html
@@ -45,7 +45,11 @@
                     <!-- Pager-->
                     <div class="d-flex justify-content-end mb-4">
                         <a class="btn btn-primary text-uppercase" href="/posts/old">
-                            Older Posts →
+                            ← Older Posts
+                        </a>
+
+                        <a class="btn btn-primary text-uppercase" href="/posts/next">
+                            Next Posts →
                         </a>
                     </div>
               </div>
