--- a/templates/Admin/login.html
+++ b/templates/Admin/login.html
@@ -1,5 +1,5 @@
 <title>{{title}}</title>
-<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/favicon.ico') }}" />
+<link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='assets/icon/favicon.ico') }}" />
     <!-- Bootstrap core CSS -->
 <link href="{{url_for('static', filename='css/bootstrap.min.css')}}" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
 
@@ -25,7 +25,7 @@
   <body class="text-center">
     
   <form class="form-signin" action="/dashboard" method="post">
-    <img class="mb-4" src="{{url_for('static', filename='assets/favicon.ico')}}" alt="" width="72" height="57">
+    <img class="mb-4" src="{{url_for('static', filename='assets/icon/favicon.ico')}}" alt="" width="72" height="57">
     <h1 class="h3 mb-3 fw-normal">Admin Login</h1>
 
     <div class="form-floating">
