--- a/templates/layout/about.html
+++ b/templates/layout/about.html
@@ -2,13 +2,13 @@
 {% block body %}
 
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('{{ url_for('static', filename='assets/img/about-bg.jpg') }}')">
+        <header class="masthead" style="background-image: url('{{ url_for('static', filename='assets/img/layout/about_bg.jpg') }}')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
                         <div class="page-heading">
                             <h1>About Us</h1>
-                            <span class="subheading">This is what I do.</span>
+                            <span class="subheading">This is what we do.</span>
                         </div>
                     </div>
                 </div>
