--- a/templates/layout/home.html
+++ b/templates/layout/home.html
@@ -2,7 +2,7 @@
 {% block body %}
 
         <!-- Page Header-->
-        <header class="masthead" style="background-image: url('{{url_for('static', filename='assets/img/home-bg.jpg')}}')">
+        <header class="masthead" style="background-image: url('{{url_for('static', filename='assets/img/layout/home-bg.jpg')}}')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7 nx-auto">
@@ -36,18 +36,17 @@
                                 posted on {{module.strftime(post.date, "%B %d, %Y")}}
                             </p>
                         </div>
-                            
-                        <!-- Divider-->
-                        <hr class="my-4" />
                         {% endfor %}
+                        <hr class="my-4" />
                         <!-- Pager-->
-                        <div class="d-flex justify-content-end mb-4">
-                            <a class="btn btn-primary text-uppercase" href="/posts/old">
-                                Older Posts →
-                            </a>
+                        <div class="d-fix justyfy-content-end my-4">
+                            <a class="btn btn-primary float-left" href="{{prev}}">&larr; Previous</a>
+                            <a class="btn btn-primary float-right" href="{{next}}">Next &rarr;</a>
                         </div>
+                    <!-- Divider-->
                     </div>
                 </div>
             </div>
-        </article>
-        {% endblock %}
+        </div>
+    </article>
+    {% endblock %}
