--- a/templates/posts/post.html
+++ b/templates/posts/post.html
@@ -2,8 +2,8 @@
 {% block body %}
 
         <!-- Page Header-->
-        {% set fname = 'assets/img/' + post.img_file %}
-        <header class="masthead" style="background-image: url('{{ url_for('static', filename=fname) }}')">
+        {% set img_file = 'assets/img/posts/' + post.img_file %}
+        <header class="masthead" style="background-image: url('{{ url_for('static', filename=img_file)}}')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7 nx-auto">
